--- a/TeacherForeignPro.csproj
+++ b/TeacherForeignPro.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="COMiCZ">
+      <HintPath>..\COMiCZ\COMiCZ\bin\Debug\COMiCZ.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -59,6 +62,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TDocument.cs" />
     <Compile Include="THistory.cs" />
     <Compile Include="TSchool.cs" />
     <EmbeddedResource Include="Find.resx">
