--- a/TeacherForeignPro.csproj
+++ b/TeacherForeignPro.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TDocument.cs" />
     <Compile Include="THistory.cs" />
+    <Compile Include="TPassportExp.cs" />
     <Compile Include="TSchool.cs" />
     <EmbeddedResource Include="Find.resx">
       <DependentUpon>Find.cs</DependentUpon>
