--- a/TeacherForeignPro.csproj
+++ b/TeacherForeignPro.csproj
@@ -62,10 +62,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoveDuplicate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RemoveDuplicate.Designer.cs">
+      <DependentUpon>RemoveDuplicate.cs</DependentUpon>
+    </Compile>
     <Compile Include="TDocument.cs" />
     <Compile Include="THistory.cs" />
+    <Compile Include="Tool.cs" />
     <Compile Include="TPassportExp.cs" />
     <Compile Include="TSchool.cs" />
+    <Compile Include="TWorkplace.cs" />
     <EmbeddedResource Include="Find.resx">
       <DependentUpon>Find.cs</DependentUpon>
     </EmbeddedResource>
@@ -81,6 +89,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RemoveDuplicate.resx">
+      <DependentUpon>RemoveDuplicate.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
